# software_render_cplusplus

./: CMakeLists.txt  LICENSE  README.md
core/: Render.cpp  Render.h
core/common/: CommonMacro.h
core/mathematics/geometry/: Rectangle.cpp  Rectangle.h  Segment.cpp  Segment.h
core/mathematics/linear/: matrix3.h  matrix4.h  vector2.h  vector3.h
core/pipeline/font/: AsciiFont.cpp  AsciiFont.h
core/pipeline/light/: Light.h  Material.h
core/pipeline/mesh/: MeshSegment.cpp  MeshSegment.h  MeshTriangle.cpp  MeshTriangle.h
core/pipeline/texture/: Texture.cpp  Texture.h
enter/: MyApplication.cpp  MyApplication.h  enter.cpp
resource/mesh/: jzt_s.txt  jzt_t0.txt  jzt_t1.txt  lft_t1.txt  tiger.txt  zfx_t1.txt
window/: WindowBasedOnQt5.cpp  WindowBasedOnQt5.h
